<resources>
    <string name="app_name">Oranda</string>
    <string name="normal_ph_range">Normal PH Range</string>
    <string name="Decision_parameters">Decision Parameters</string>
    <string name="General_setting"> General Setting</string>
    <string name="Normal_Temperature">Normal Temperature</string>
    <string name="Enter_City_Name">    Enter City Name : </string>
    <string name="notify_on_extreme_values">Notify On Extreme Values</string>
    <string name="CopyRight">"Copyright \u00a92020, Graduation Project"</string>
    <string name="smart_fish_farm"> Smart Fish Farm</string>
    <string name="History">History</string>
    <string name="caco3_tank"> CaCo3 Tank</string>
    <string name="Paddle"> Paddle</string>
    <string name="Heater"> Heater</string>
    <string name="Food_tank"> Food Tank</string>
    <string name="ph">  PH :          </string>
    <string name="temp">  Temp :          </string>
    <string name="nh3">   NH3 :           </string>
    <string name="Setting">Setting</string>
    <string name="LiveMonitor">Live Monitor</string>
    <string name="LogOut">Log Out</string>
    <string name="pro">Smart Fish Farm</string>
    <string name="LogIn">Log In</string>
    <string name="Register">Register</string>
    <string name="password"> Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="email"> E-mail</string>
    <string name="phone"> Phone</string>
    <string name="Username">Username</string>
    <string name="full_name">full name</string>
    <string name="register">Register</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be at least 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="registration_Fail">Already Registered..</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="previous"> Previous</string>
    <string name="next"> Next</string>
    <string name="live_monitor_des"> This Page Help You to Know  The Values of Parameters Which Affect in The Quality of Water in The Farm... </string>
</resources>
