<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/light_color"
    tools:context=".setting_page">
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/General_setting"
        android:textSize="32dp"
       android:textColor="@color/light_color"
        ></TextView>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:text="notify on extreme values"></androidx.appcompat.widget.AppCompatCheckBox>
<TextView
    android:layout_marginTop="16dp"
    android:textSize="32dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/light_color"
    android:text="@string/Decision_parameters"
    ></TextView>
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_ph_range"></TextView>
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Normal_Temperature"></TextView>
</LinearLayout>