 <LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background_g"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/oranda"
        android:layout_gravity="center"></ImageView>
    <TableLayout
      android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="48dp"
        android:layout_marginHorizontal="10dp"
        >
    <TableRow android:paddingBottom="8dp"
        android:paddingTop="8dp"            >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_light"
        android:text="@string/Paddle"
        android:textSize="24dp"
></TextView>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/paddle_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="off"
        android:textOn="on"
        app:showText="true"
        android:textColor="@color/gray"
        android:thumb="@drawable/thumb1"
        app:track="@drawable/track1"/>
    </TableRow>
        <TableRow android:paddingBottom="8dp" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_light"
        android:text="@string/Heater"
        android:textSize="24dp"
        android:layout_marginTop="16dp"></TextView>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/heater_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="off"
                android:textOn="on"
                app:showText="true"
                android:layout_marginLeft="64dp"
                android:textColor="@color/gray"
                android:thumb="@drawable/thumb1"
                app:track="@drawable/track1"/>
        </TableRow>
        <TableRow android:paddingBottom="8dp" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_light"
        android:text="@string/Food_tank"
        android:textSize="24dp"
        android:layout_marginTop="16dp"></TextView>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/food_tank_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="off"
                android:textOn="on"
                app:showText="true"
                android:textColor="@color/gray"
                android:thumb="@drawable/thumb1"
                app:track="@drawable/track1"/>
        </TableRow><TableRow android:paddingBottom="8dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_light"
        android:text="@string/caco3_tank"
        android:textSize="24dp"
        android:layout_marginTop="16dp"></TextView>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/caco_tank_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="off"
            android:textOn="on"
            app:showText="true"

            android:textColor="@color/gray"
            android:thumb="@drawable/thumb1"
            app:track="@drawable/track1"/>
    </TableRow>
    </TableLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/CopyRight"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
        android:gravity="center"></TextView>
</LinearLayout>