<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/back"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="126dp"
        android:background="@drawable/round_eidttxt"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" E-mail"
            android:drawableLeft="@drawable/email"
            android:inputType="textEmailAddress" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_eidttxt"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=" Username"
            android:drawableLeft="@drawable/username"
            android:inputType="text" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        android:background="@drawable/round_eidttxt"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:background="@drawable/round_eidttxt"
        android:layout_marginTop="16dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Register_btn"
        android:onClick="RegisterInput"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:background="@drawable/round_btn"
        android:textColor="#46B5D1"
        android:text="@string/Register"
        tools:ignore="OnClick" />
    <Button
        android:layout_marginTop="8dp"
        android:id="@+id/login1_btn"
        android:text="already have account?SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_btn"
        android:layout_gravity="center"
        android:textColor="#46B5D1"
        ></Button>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerVertical="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#687466"
        android:text="@string/CopyRight"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
        android:gravity="center"></TextView>

</LinearLayout>