<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:background="@drawable/background_g"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/oranda"
        android:layout_marginBottom="48dp"></ImageView>
    <TableLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="10dp"
        >
        <TableRow android:paddingBottom="16dp"
          android:paddingTop="32dp"            >
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pht"
                android:text="@string/ph"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"

                android:textColor="@color/gray_light"
                />
            <EditText android:layout_width="match_parent"
                android:id="@+id/ph__read_txt"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed-medium"
                android:background="@drawable/round_edit_txt_live_page"
                android:drawableLeft="@drawable/ic_flask"
                />
        </TableRow>
        <TableRow android:paddingBottom="16dp" android:paddingTop="32dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tempt"
                android:text="@string/temp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/gray_light"
                />

            <EditText
                android:id="@+id/temp_read_txt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:textColor="#000000"
                android:background="@drawable/round_edit_txt_live_page"
                android:fontFamily="sans-serif-condensed-medium"
                android:drawableLeft="@drawable/ic_dna" />



        </TableRow>
        <TableRow android:paddingBottom="16dp" android:paddingTop="32dp">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ammoniat"
                android:text="@string/nh3"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/gray_light"
                />

            <EditText
                android:id="@+id/ammonia_read_txt"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:textColor="#000000"
                android:background="@drawable/round_edit_txt_live_page"
                android:drawableLeft="@drawable/ic_test_tube"
                android:fontFamily="sans-serif-condensed-medium"
                />


        </TableRow>

    </TableLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show"
        android:id="@+id/show"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/light_color"
        android:background="@drawable/round_btn"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabone"
        android:layout_width="14dp"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:layout_toRightOf="@+id/show"

        android:tint="@android:color/white"
        app:fabSize="mini"
        android:layout_marginLeft="186dp"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"

        android:layout_toRightOf="@+id/show"
        android:src="@drawable/help"
        android:layout_marginLeft="186dp"



        />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#687466"
        android:text="@string/CopyRight"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
        android:gravity="center"></TextView>
</LinearLayout>